Bug 154545 - bad bookmark selection in Navigator tree list at nested bookmarks
Summary: bad bookmark selection in Navigator tree list at nested bookmarks
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.5.3
Keywords:
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2023-04-01 19:08 UTC by László Németh
Modified: 2023-04-03 06:46 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2023-04-01 19:08:14 UTC
Description:
After selecting a nested bookmark in the Navigator with double click or Enter, the selected item changes to the main bookmark in the tree list.

Steps to Reproduce:
1. click on a nested bookmark in the Navigator

Actual Results:
the selected item changes to the main bookmark in the tree list

Expected Results:
the selected item doesn't change


Reproducible: Always


User Profile Reset: No

Additional Info:
Metabug: Bug 103030
Comment 1 Commit Notification 2023-04-02 20:54:25 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c4a58634753a84b09f20f7271d6525a6656522d3

tdf#154545 sw Navigator: select & track nested bookmarks

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-04-03 06:46:18 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/c8cb90453c747fec29cf9abe293c9641e91c04bc

tdf#154545 sw Navigator: select & track nested bookmarks

It will be available in 7.5.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.