tdf#154545 sw Navigator: select & track nested bookmarks

After selecting a nested bookmark in the Navigator with
double click or Enter, the selected item changed to the
item of the main bookmark in the tree list. This jumping
was very annoying especially with multiple nested bookmarks
inside the same bookmark.

Navigator didn't track nested bookmarks, i.e. it always
showed the main bookmark instead of the actual nested one
under the text cursor.

Change-Id: Ic3f1e8321454d4ad892708e76c001da6eca30cf9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149915
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit c4a58634753a84b09f20f7271d6525a6656522d3)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149887